Created basic API call, API data handler, primeary scaffold html, basic formatting css, and very minimal styling

--- a/src/template.html
+++ b/src/template.html
@@ -3,9 +3,64 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Weather App</title>
 </head>
 <body>
+
+  <div class="app-box">
+
+    <div class="search-bar">
+    <input type="text" class="location-input" placeholder="Enter a location" required/>
+    <button class="search-button">Get Weather</button>
+    </div>
+
+    <div class="weather-display">
+      <div class="weather-box-1">
+        <div>
+          <h3 class="weather-label">It is currently:</h3>
+        </div>
+        <div class="weather-conditions"></div>
+        <div class="weather-icon"></div>
+      </div>
+
+      <div class="weather-box-2">
+        <div>
+          <h3 class="weather-label">Forecast:</h3>
+        </div>
+        <div class="weather-description"></div>
+      </div>
+
+      <div class="weather-box-3">
+        <div>
+          <h3 class="weather-label">Current Temperature:</h3>
+        </div>
+        <div class="weather-temp"></div>
+      </div>
+
+      <div class="weather-box-4">
+        <div>
+          <h3 class="weather-label">Feels Like Temperature:</h3>
+        </div>
+        <div class="weather-feelslike"></div>
+      </div>
+
+      <div class="weather-box-5">
+        <div>
+          <h3 class="weather-label">Humidity:</h3>
+        </div>
+        <div class="weather-humidity"></div>
+      </div>
+
+      <div class="weather-box-6">
+        <div>
+          <h3 class="weather-label">Chance of Precipitation:</h3>
+        </div>
+        <div class="weather-precipprob"></div>
+      </div>
+    </div>
+
+  </div>
+
 
 </body>
 </html>
