Changed the styles, added fonts and icons, and adjusted position of elements to fit new icons. Created an icon selection helper. Added favicon

--- a/src/template.html
+++ b/src/template.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Weather App</title>
+  <link rel="icon" type="image/x-icon" href="./assets/partlyCloudyDay.png">
 </head>
 <body>
 
@@ -11,7 +12,7 @@
 
     <div class="search-bar">
     <input type="text" class="location-input" placeholder="Enter a location" required/>
-    <button class="search-button">Get Weather</button>
+    <button class="search-button">Get Weather!</button>
     </div>
 
     <div class="weather-display">
@@ -20,7 +21,7 @@
           <h3 class="weather-label">It is currently:</h3>
         </div>
         <div class="weather-conditions"></div>
-        <div class="weather-icon"></div>
+        <img class="weather-icon" src="https://.com"/>
       </div>
 
       <div class="weather-box-2">
